--- a/sudamerica.html
+++ b/sudamerica.html
@@ -1,93 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<nav class="lg:px-16 px-6 bg-white shadow-md flex flex-wrap items-center lg:py-0 py-2">
-    <div class="flex-1 flex justify-between items-center">
-      <a href="https://rz-codes.com" class="flex text-lg font-semibold">
-        <img
-          src="https://i.pinimg.com/736x/76/7b/78/767b78e90678f4dbfe20be71e51e2b40.jpg"
-          width="50"
-          height="50"
-          class="p-2"
-          alt="Rz Codes Logo"
-        />
-        <div class="mt-3 text-red-600">Juanini</div>
-      </a>
-    </div>
-    <label for="menu-toggle" class="cursor-pointer lg:hidden block">
-      <svg
-        class="fill-current text-gray-900"
-        xmlns="http://www.w3.org/2000/svg"
-        width="20"
-        height="20"
-        viewBox="0 0 20 20"
-      >
-        <title>menu</title>
-        <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-      </svg>
-    </label>
-    <input class="hidden" type="checkbox" id="menu-toggle" />
-    <div class="hidden lg:flex lg:items-center lg:w-auto w-full" id="menu">
-      <nav>
-        <ul class="text-xl text-center items-center gap-x-5 pt-4 md:gap-x-4 lg:text-lg lg:flex  lg:pt-0">
-          <li class="py-2 lg:py-0 ">
-            <a
-              class="text-red-600 hover:pb-4 hover:border-b-4 hover:border-yellow-400"
-              href="index.html"
-            >
-             Precentacion
-            </a>
-          </li>
-          <li class="py-2 lg:py-0 ">
-            <a
-              class="text-red-600 hover:pb-4 hover:border-b-4 hover:border-yellow-400"
-              href="europa.html"
-            >
-              Europa
-            </a>
-          </li>
-          <li class="py-2 lg:py-0 ">
-            <a
-              class="text-red-600 hover:pb-4 hover:border-b-4 hover:border-yellow-400"
-              href="asia.html"
-            >
-              Asia
-            </a>
-          </li>
-          <li class="py-2 lg:py-0 ">
-            <a
-              class="text-red-600 hover:pb-4 hover:border-b-4 hover:border-yellow-400"
-              href="norteamerica.html"
-            >
-              NorteAmerica
-            </a>
-          </li>
-          <li class="py-2 lg:py-0 ">
-            <a
-              class="text-red-600 hover:pb-4 hover:border-b-4 hover:border-yellow-400"
-              href="oceania.html"
-            >
-              Oceania
-            </a>
-          </li>
-          <li class="py-2 lg:py-0 ">
-            <a
-              class="text-red-600 hover:pb-4 hover:border-b-4 hover:border-yellow-400"
-               href="africa.html"
-            >
-             Africa
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </nav>
+<nav class="nav-container">
+  <div class="flex-1 flex justify-between items-center">
+    <a href="https://rz-codes.com" class="logo-area">
+      <img
+        src="https://i.pinimg.com/736x/76/7b/78/767b78e90678f4dbfe20be71e51e2b40.jpg"
+        width="50"
+        height="50"
+        class="p-2"
+        alt="Logo"
+      />
+      <div class="logo-text">Juanini</div>
+    </a>
+  </div>
+
+  <label for="menu-toggle" class="menu-icon lg-hidden">
+    <svg
+      class="fill-current text-gray-900"
+      xmlns="http://www.w3.org/2000/svg"
+      width="20"
+      height="20"
+      viewBox="0 0 20 20"
+    >
+      <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+    </svg>
+  </label>
+
+  <input class="hidden" type="checkbox" id="menu-toggle" />
+
+  <div class="menu" id="menu">
+    <ul>
+      <li><a href="index.html">Presentación</a></li>
+      <li><a href="europa.html">Europa</a></li>
+      <li><a href="asia.html">Asia</a></li>
+      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="oceania.html">Oceanía</a></li>
+      <li><a href="africa.html">África</a></li>
+    </ul>
+  </div>
+</nav>
 
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
@@ -110,7 +69,7 @@
        
           <div class="text-center mt-12">
             <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
-              UN POCO DEL MUNDO FUNGI EN, ¡EL MUNDO!
+              Sudamerica
             </h3>
             <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
               <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
@@ -130,19 +89,29 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
+    </main>
     <footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
   <div class="container mx-auto px-4">
     <div class="flex flex-wrap items-center md:justify-between justify-center">
       <div class="w-full md:w-6/12 px-4 mx-auto text-center">
         <div class="text-sm text-blueGray-500 font-semibold py-1">
-          Hecho por<a href="mailto: juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde <a href="contacto.html" class="text-blueGray-500 hover:text-blueGray-800" target="_blank"> esta pagina</a>. Y si desea enviarmos una respuesta sobre nuestro sitio web no dude en completar este <a href="formulario.html" class="text-blueGray-500 hover:text-blueGray-800" target="_blank">form</a>
-      </div><!--AGREGAR BOTONES AL COSTADO IZQUIERDO PARA CONTACTO Y FORMULARIO-->
+          Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
+        <div class="absolute bottom-4 right-4 flex gap-3">
+  <a href="contacto.html"
+     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
+     CONTACTO
+  </a>
+  <a href="formulario.html"
+     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
+     FORMULARIO
+  </a>
+        </div>
+        </div><!--AGREGAR BOTONES AL COSTADO IZQUIERDO PARA CONTACTO Y FORMULARIO-->
     </div>
   </div>
   </div>
 </footer>
-</main>
-
+<script src="js/nav.js"></script>
 </body>
 </html>
