acordion de inf y subcarpetas

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <li><a href="norteamerica.html">Norteamérica</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
+       <li><a href="sudamerica.html">Sudamerica</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('./img/fondo.jpg');"><!--AGREGAR IMG DE RUTA CREAR CARPETA Y AGREGAR PERSONALIZADAS A CD PAG-->
+     style="background-image: url(img/indexHongos.jpg);"><!--AGREGAR IMG DE RUTA CREAR CARPETA Y AGREGAR PERSONALIZADAS A CD PAG-->
   <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
 </div>
     <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px" style="transform: translateZ(0px)">
@@ -83,7 +84,6 @@
                 <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
                   TEXTO
                 </p>
-                <a href="SUBCARPETAS/sudamericaf.html" class="font-normal text-pink-500">HONGOS</a>
               </div>
             </div>
           </div>
