--- a/africa.html
+++ b/africa.html
@@ -44,16 +44,18 @@
       <li><a href="norteamerica.html">Norteamérica</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
+       <li><a href="sudamerica.html">Sudamerica</a></li>
     </ul>
   </div>
 </nav>
+
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('./img/fondo.jpg');"><!--AGREGAR IMG DE RUTA CREAR CARPETA Y AGREGAR PERSONALIZADAS A CD PAG-->
+     style="background-image: url(img/europa.jpg)"><!--AGREGAR IMG DE RUTA CREAR CARPETA Y AGREGAR PERSONALIZADAS A CD PAG-->
   <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
 </div>
     <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px" style="transform: translateZ(0px)">
@@ -66,23 +68,19 @@
     <div class="container mx-auto px-4">
       <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
        
-          <div class="text-center mt-12">
-            <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
-              Africa
-            </h3>
-            <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
-              <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
-              Sudamerica
-            </div><!--este div sierve para la ubicacion-->
-            
-          </div>
+         <div class="text-center mt-12">
+  <h3 class="text-3xl font-semibold text-blueGray-700 flex justify-center items-center gap-2 uppercase">
+    <i class="fas fa-map-marker-alt text-blueGray-400"></i>
+    Africa
+  </h3>
+</div>
           <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
             <div class="flex flex-wrap justify-center">
               <div class="w-full lg:w-9/12 px-4">
                 <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
                   TEXTO
                 </p>
-                <a href="SUBCARPETAS/sudamericaf.html" class="font-normal text-pink-500">HONGOS</a>
+                <a href="SUBCARPETAS/africaf.html" class="font-normal text-pink-500">HONGOS</a>
               </div>
             </div>
           </div>
