--- a/africa.html
+++ b/africa.html
@@ -78,7 +78,103 @@
             <div class="flex flex-wrap justify-center">
               <div class="w-full lg:w-9/12 px-4">
                 <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                  TEXTO
+    <div class="m-2 space-y-2">
+  <div
+    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+    tabindex="1"
+  >
+    <div class="flex cursor-pointer items-center justify-between">
+      <span> Norte  </span>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
+      />
+    </div>
+    <div
+      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
+    >
+     Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida. Fríos intensos, inviernos interminables y veranos cortos moldean un paisaje que se mueve entre tundras congeladas y taigas profundas.
+ Los bosques de coníferas, infinitos, son hogar de animales imponentes como el tigre siberiano, el oso pardo y el lince. Aunque existen ciudades como Yakutsk, la mayoría del territorio permanece prácticamente vacío, donde la naturaleza sigue dictando las reglas.
+    </div>
+  </div>
+
+  <div
+    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+    tabindex="2"
+  >
+    <div class="flex cursor-pointer items-center justify-between">
+      <span> Sur  </span>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
+      />
+    </div>
+    <div
+      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
+    >
+      El sur asiático es una explosión de vida. Desde la humedad abrumadora de las selvas tropicales en India y Sri Lanka, hasta los bosques secos y sabanas del centro del subcontinente, el clima monzónico hace que todo cambie drásticamente según la estación.
+ Aquí viven elefantes asiáticos, rinocerontes, tigres de Bengala y una infinidad de aves coloridas. Las ciudades —Bombay, Delhi, Karachi— son inmensas, pero los humedales, manglares y reservas como Sundarbans mantienen una lucha constante para conservar su espacio frente al crecimiento humano.
+
+  </div>
+  </div>
+
+  <div
+    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+    tabindex="3"
+  >
+    <div class="flex cursor-pointer items-center justify-between">
+      <span> Este </span>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
+      />
+    </div>
+    <div
+      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
+    >
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat.
+    </div>
+  </div>
+   <div
+    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+    tabindex="2"
+  >
+    <div class="flex cursor-pointer items-center justify-between">
+      <span> Oeste  </span>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
+      />
+    </div>
+    <div
+      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
+    >
+      texto
+    
+  </div>
+  </div>
+   <div
+    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+    tabindex="2"
+  >
+    <div class="flex cursor-pointer items-center justify-between">
+      <span> Centro  </span>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
+      />
+    </div>
+    <div
+      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
+    >
+      texto
+  </div>
+  </div>
+  </div>
+</div>
                 </p>
                 <a href="SUBCARPETAS/africaf.html" class="font-normal text-pink-500">HONGOS</a>
               </div>
