--- a/sudamerica.html
+++ b/sudamerica.html
@@ -78,7 +78,7 @@
             <div class="flex flex-wrap justify-center">
               <div class="w-full lg:w-9/12 px-4">
                 <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                  <div class="m-2 space-y-2">
+                 <div class="m-2 space-y-2">
   <div
     class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
     tabindex="1"
@@ -115,6 +115,7 @@
       El sur asiático es una explosión de vida. Desde la humedad abrumadora de las selvas tropicales en India y Sri Lanka, hasta los bosques secos y sabanas del centro del subcontinente, el clima monzónico hace que todo cambie drásticamente según la estación.
  Aquí viven elefantes asiáticos, rinocerontes, tigres de Bengala y una infinidad de aves coloridas. Las ciudades —Bombay, Delhi, Karachi— son inmensas, pero los humedales, manglares y reservas como Sundarbans mantienen una lucha constante para conservar su espacio frente al crecimiento humano.
 
+  </div>
   </div>
 
   <div
@@ -154,6 +155,7 @@
       texto
     
   </div>
+  </div>
    <div
     class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
     tabindex="2"
@@ -169,6 +171,8 @@
       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
     >
       texto
+  </div>
+  </div>
   </div>
 </div>
                 </p>
