--- a/oceania.html
+++ b/oceania.html
@@ -116,6 +116,7 @@
  Aquí viven elefantes asiáticos, rinocerontes, tigres de Bengala y una infinidad de aves coloridas. Las ciudades —Bombay, Delhi, Karachi— son inmensas, pero los humedales, manglares y reservas como Sundarbans mantienen una lucha constante para conservar su espacio frente al crecimiento humano.
 
   </div>
+  </div>
 
   <div
     class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
@@ -154,6 +155,7 @@
       texto
     
   </div>
+  </div>
    <div
     class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
     tabindex="2"
@@ -169,6 +171,8 @@
       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
     >
       texto
+  </div>
+  </div>
   </div>
 </div>
                 </p>
