boton ver hongos arreglado

--- a/sudamerica.html
+++ b/sudamerica.html
@@ -5,9 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/index.css">
+
+    <!-- NOTUS / ICONOS -->
+    <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
+    <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 </head>
+
 <body>
+
+<!-- NAV -->
 <nav class="nav-container">
   <div class="flex-1 flex justify-between items-center">
     <a href="https://rz-codes.com" class="logo-area">
@@ -23,13 +30,7 @@
   </div>
 
   <label for="menu-toggle" class="menu-icon lg-hidden">
-    <svg
-      class="fill-current text-gray-900"
-      xmlns="http://www.w3.org/2000/svg"
-      width="20"
-      height="20"
-      viewBox="0 0 20 20"
-    >
+    <svg class="fill-current text-gray-900" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
       <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
     </svg>
   </label>
@@ -39,172 +40,157 @@
   <div class="menu" id="menu">
     <ul>
       <li><a href="index.html">Presentación</a></li>
-      <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
       <li><a href="norteamerica.html">Norteamérica</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-       <li><a href="sudamerica.html">Sudamerica</a></li>
+      <li><a href="sudamerica.html">Sudamérica</a></li>
     </ul>
   </div>
 </nav>
 
-    <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
-<link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-
+<!-- HEADER IMG -->
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url(img/europa.jpg)"><!--AGREGAR IMG DE RUTA CREAR CARPETA Y AGREGAR PERSONALIZADAS A CD PAG-->
-  <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
-</div>
-    <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px" style="transform: translateZ(0px)">
-      <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+         style="background-image: url(img/europa.jpg)">
+      <span class="w-full h-full absolute opacity-50 bg-black"></span>
+    </div>
+
+    <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px">
+      <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg">
         <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
       </svg>
     </div>
   </section>
-	<section class="relative py-16 bg-blueGray-200">
+
+  <!-- CONTENIDO -->
+  <section class="relative py-16 bg-blueGray-200">
     <div class="container mx-auto px-4">
-      <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
-       
-         <div class="text-center mt-12">
-  <h3 class="text-3xl font-semibold text-blueGray-700 flex justify-center items-center gap-2 uppercase">
-    <i class="fas fa-map-marker-alt text-blueGray-400"></i>
-    Sudamerica
-  </h3>
-</div>
-          <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
-            <div class="flex flex-wrap justify-center">
-              <div class="w-full lg:w-9/12 px-4">
-                <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                 <div class="m-2 space-y-2">
-  <div
-    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-    tabindex="1"
-  >
-    <div class="flex cursor-pointer items-center justify-between">
-      <span> Norte  </span>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-      />
-    </div>
-    <div
-      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-    >
-     Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida. Fríos intensos, inviernos interminables y veranos cortos moldean un paisaje que se mueve entre tundras congeladas y taigas profundas.
- Los bosques de coníferas, infinitos, son hogar de animales imponentes como el tigre siberiano, el oso pardo y el lince. Aunque existen ciudades como Yakutsk, la mayoría del territorio permanece prácticamente vacío, donde la naturaleza sigue dictando las reglas.
-    </div>
-  </div>
+      <div class="relative flex flex-col bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
 
-  <div
-    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-    tabindex="2"
-  >
-    <div class="flex cursor-pointer items-center justify-between">
-      <span> Sur  </span>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-      />
-    </div>
-    <div
-      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-    >
-      El sur asiático es una explosión de vida. Desde la humedad abrumadora de las selvas tropicales en India y Sri Lanka, hasta los bosques secos y sabanas del centro del subcontinente, el clima monzónico hace que todo cambie drásticamente según la estación.
- Aquí viven elefantes asiáticos, rinocerontes, tigres de Bengala y una infinidad de aves coloridas. Las ciudades —Bombay, Delhi, Karachi— son inmensas, pero los humedales, manglares y reservas como Sundarbans mantienen una lucha constante para conservar su espacio frente al crecimiento humano.
+        <!-- TÍTULO -->
+        <div class="text-center mt-12">
+          <h3 class="text-3xl font-semibold text-blueGray-700 flex justify-center items-center gap-2 uppercase">
+            <i class="fas fa-map-marker-alt text-blueGray-400"></i>
+            Sudamérica
+          </h3>
+        </div>
 
-  </div>
-  </div>
+        <!-- INFO -->
+        <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
+          <div class="flex flex-wrap justify-center">
+            <div class="w-full lg:w-9/12 px-4">
 
-  <div
-    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-    tabindex="3"
-  >
-    <div class="flex cursor-pointer items-center justify-between">
-      <span> Este </span>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-      />
-    </div>
-    <div
-      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-    >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.
-    </div>
-  </div>
-   <div
-    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-    tabindex="2"
-  >
-    <div class="flex cursor-pointer items-center justify-between">
-      <span> Oeste  </span>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-      />
-    </div>
-    <div
-      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-    >
-      texto
-    
-  </div>
-  </div>
-   <div
-    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-    tabindex="2"
-  >
-    <div class="flex cursor-pointer items-center justify-between">
-      <span> Centro  </span>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-      />
-    </div>
-    <div
-      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-    >
-      texto
-  </div>
-  </div>
-  </div>
-</div>
-                </p>
-                <a href="SUBCARPETAS/sudamericaf.html" class="font-normal text-pink-500">HONGOS</a>
+              <!-- ACORDEÓN -->
+              <div class="m-2 space-y-2">
+
+                <!-- NORTE -->
+                <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="1">
+                  <div class="flex cursor-pointer items-center justify-between">
+                    <span>Norte</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                         class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
+                  </div>
+                  <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
+                    Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida...
+                  </div>
+                </div>
+
+                <!-- SUR -->
+                <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="2">
+                  <div class="flex cursor-pointer items-center justify-between">
+                    <span>Sur</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                         class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
+                  </div>
+                  <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
+                    El sur asiático es una explosión de vida...
+                  </div>
+                </div>
+
+                <!-- ESTE -->
+                <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="3">
+                  <div class="flex cursor-pointer items-center justify-between">
+                    <span>Este</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                         class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
+                  </div>
+                  <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
+                    Lorem ipsum dolor sit amet...
+                  </div>
+                </div>
+
+                <!-- OESTE -->
+                <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="4">
+                  <div class="flex cursor-pointer items-center justify-between">
+                    <span>Oeste</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                         class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
+                  </div>
+                  <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
+                    texto
+                  </div>
+                </div>
+
+                <!-- CENTRO -->
+                <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="5">
+                  <div class="flex cursor-pointer items-center justify-between">
+                    <span>Centro</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                         class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
+                  </div>
+                  <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
+                    texto
+                  </div>
+                </div>
+
               </div>
+
+              <!-- BOTÓN — AHORA DEBAJO Y CENTRADO -->
+              <div class="text-center mt-6">
+  <a href="SUBCARPETAS/sudamericaf.html" class="btn-hongos">
+    Ver Hongos
+  </a>
+</div>
+
             </div>
           </div>
         </div>
+
       </div>
-    </section>
-    </main>
-    <footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
+    </div>
+  </section>
+</main>
+
+<!-- FOOTER -->
+<footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
   <div class="container mx-auto px-4">
     <div class="flex flex-wrap items-center md:justify-between justify-center">
       <div class="w-full md:w-6/12 px-4 mx-auto text-center">
         <div class="text-sm text-blueGray-500 font-semibold py-1">
-          Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
-        <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
-     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
-     CONTACTO
-  </a>
-  <a href="formulario.html"
-     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
-     FORMULARIO
-  </a>
+          Hecho por
+          <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">Juanita</a>,
+          y puedes contactarnos desde los botones a la derecha
         </div>
-        </div><!--AGREGAR BOTONES AL COSTADO IZQUIERDO PARA CONTACTO Y FORMULARIO-->
+
+        <div class="absolute bottom-4 right-4 flex gap-3">
+          <a href="contacto.html"
+             class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
+            CONTACTO
+          </a>
+          <a href="formulario.html"
+             class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
+            FORMULARIO
+          </a>
+        </div>
+
+      </div>
     </div>
   </div>
-  </div>
 </footer>
+
 <script src="js/nav.js"></script>
+
 </body>
 </html>
